--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <html xmlns:og="http://ogp.me/ns#">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="Portfolio">
     <meta property="og:image" content="img/thumbnail.png">
-    <meta property="og:image:type" content="image/png">
     <meta property="og:description" content="This is NJ's Portfolio">
+    <meta property="og:url" content="https://nj2612portfolio.netlify.app">
 
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
