--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="Portfolio">
-    <meta property="og:image" content="https://www.canva.com/design/DAGKjA347As/KOKKq4aBVIzrVBub9tSGzA/view?utm_content=DAGKjA347As&utm_campaign=designshare&utm_medium=link&utm_source=editor">
-    <meta property="og:image:type" content="image/png">
-    <meta property="og:image:width" content="1280">
-    <meta property="og:image:height" content="720">
+    <meta property="og:image" content="https://nj2612portfolio.netlify.app/img/thumbnail.png">
+    <meta property="og:image:width" content="1280 px">
+    <meta property="og:image:height" content="720 px">
     <meta property="og:description" content="This is NJ's Portfolio">
     <meta property="og:url" content="https://nj2612portfolio.netlify.app">
 
