--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="Portfolio">
-    <meta property="og:image" content="https://imgur.com/EaYqHwr">
+    <meta property="og:image" content="https://imgur.com/kGgdPLV">
     <meta property="og:image:width" content="1280 px">
     <meta property="og:image:height" content="720 px">
     <meta property="og:description" content="This is NJ's Portfolio">
