--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     
     <meta property="og:title" content="Portfolio">
     <meta property="og:image" content="https://i.imgur.com/kGgdPLV.png">
-    <meta property="og:image:width" content="1280 px">
-    <meta property="og:image:height" content="720 px">
     <meta property="og:description" content="This is NJ's Portfolio">
     <meta property="og:url" content="https://nj2612portfolio.netlify.app">
+    <meta property="og:image:width" content="1280">
+    <meta property="og:image:height" content="720">
+    <meta property="og:type" content="website">
 
     <title>Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
