--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <meta property="og:title" content="Portfolio">
-    <meta property="og:image" content="https://i.imgur.com/kGgdPLV.png">
+    <meta property="og:image" content="https://drive.google.com/file/d/11YCSa5SXanBKpkOERr25VlGS5FR45NYo/view?usp=drive_link">
     <meta property="og:description" content="This is NJ's Portfolio">
     <meta property="og:url" content="https://nj2612portfolio.netlify.app">
     <meta property="og:type" content="website">
