--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<html xmlns:og="http://ogp.me/ns#">
 <head>
  
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta property="og:title" content="Portfolio">
+    <meta property="og:title" content="MY Portfolio">
+    <meta property="og:description" content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio weebsite that highlights my accomplishments and capabilities">
     <meta property="og:image" content="https://drive.google.com/file/d/11YCSa5SXanBKpkOERr25VlGS5FR45NYo/view?usp=drive_link">
-    <meta property="og:description" content="This is NJ's Portfolio">
     <meta property="og:url" content="https://nj2612portfolio.netlify.app">
     <meta property="og:type" content="website">
 
