--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
   <section id="contact" class="text-center" style="background-color: rgba(111, 111, 113, 0.599);">
     <h1>CONTACT ME</h1>
-    <form action="https://form.taxi/s/vsh6ka2m" style="border: 2px;">
+    <form action="https://form.taxi/s/vsh6ka2m" method="POST" style="border: 2px;">
       <label for="name">Full Name</label><br>
 
       <input type="text" id="name" name="fname" value=""><br>
