--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -49,7 +47,7 @@
               <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+              <a class="nav-link" href="#footer">Contact</a>
             </li>
           </ul>
         </div>
@@ -59,7 +57,7 @@
 
 
 
-  <header class="text-center" style="background-color: rgb(145, 143, 141);">
+  <header class="text-center" style="background-color: rgba(70, 141, 173, 0.715);">
     <br><br><br><br>
     <h1 class="display-4">Hello, I'm Naina Joshi</h1>
     <p class="lead">A passionate Web Developer</p>
@@ -89,109 +87,118 @@
   </section>
 
 
-<section id="project" class="container-fluid" style="background-color: rgba(111, 111, 113, 0.599);">
+  <section id="project" class="container-fluid" style="background-color: rgba(70, 141, 173, 0.715);">
     <br>
-    <h1 class="text-center"> PROJECTS</h1><br><br>
-
-    <!-- Existing Project: Stan Lee Tribute Page -->
+    <h1 class="text-center">PROJECTS</h1><br><br>
+  
+    <!-- Stan Lee Tribute Page -->
     <div class="row">
       <div class="col-12 col-md-6">
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4">
               <a href="https://stanlee-tribute-page.netlify.app" target="_blank">
-                <img src="img/pro.jpeg" class="img-fluid rounded-start" alt="...">
+                <img src="img/pro.jpeg" class="img-fluid rounded-start" alt="Stan Lee Tribute Page">
               </a>
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Stan Lee Tribute Page</h5>
-                <p class="card-text">The Stan Lee tribute page project honors the legendary comic book creator behind
-                  Marvel's iconic superheroes. It highlights his contributions to the comic book industry, his creative
-                  collaborations, and his lasting impact on popular culture, celebrating the imagination and legacy of a
-                  true visionary.</p>
+                <p class="card-text">The Stan Lee tribute page project honors the legendary comic book creator behind Marvel's iconic superheroes. It highlights his contributions to the comic book industry, his creative collaborations, and his lasting impact on popular culture.</p>
                 <a href="https://stanlee-tribute-page.netlify.app"><img src="img/logo.png" width="30px"></a>
               </div>
             </div>
           </div>
         </div>
       </div>
+  
+      <!-- Library Management System -->
       <div class="col-12 col-md-6">
         <div class="card mb-3">
           <div class="row g-0">
             <div class="col-md-4">
-              <img src="img/library.jpeg" class="img-fluid rounded-start" alt="Library Management System"> 
+              <img src="img/library.jpeg" class="img-fluid rounded-start" alt="Library Management System">
             </div>
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Library Management System</h5>
-                <p class="card-text">This project is a Library Management System that allows users to manage book
-                  inventories, track borrowed books, and facilitate user registrations. It aims to simplify the
-                  management of library resources and enhance user experience.</p> 
-                <a href=https://github.com/NJ2612/library_management_system><img src="img/logo.png" width="30px"></a> 
+                <p class="card-text">This project is a Library Management System that allows users to manage book inventories, track borrowed books, and facilitate user registrations. It aims to simplify the management of library resources and enhance user experience.</p>
+                <a href="https://github.com/NJ2612/library_management_system"><img src="img/logo.png" width="30px"></a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  <br>
+  
+    <!-- Brain Tumor Detection System -->
+    <div class="row">
+      <div class="col-12 col-md-6">
+        <div class="card mb-3">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="img/brain_tumor.jpeg" class="img-fluid rounded-start" alt="Brain Tumor Detection System">
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h5 class="card-title">Brain Tumor Detection System</h5>
+                <p class="card-text">This project is a machine learning-based system designed to detect brain tumors from MRI images. It utilizes image processing and advanced algorithms to provide accurate results, assisting healthcare professionals in diagnosis.</p>
+                <a href="https://github.com/NJ2612/Brain_Tumor_Detection_System"><img src="img/logo.png" width="30px"></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
+  
 
 
   <section id="skills">
     <br>
     <h1 class="text-center">SKILLS</h1>
-    <ul>
-      <br>
-      <li>HTML</li><br>
-      <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0"
-        aria-valuemax="100">
-        <div class="progress-bar bg-success" style="width: 50%"></div>
+    <div class="container text-center">
+      <div class="row">
+        <!-- Programming Languages -->
+        <div class="col-4">
+          <h3>Languages</h3>
+          <p>Python, C, C++</p>
+        </div>
+        <!-- Backend -->
+        <div class="col-4">
+          <h3>Backend</h3>
+          <p>Django, Flask</p>
+        </div>
+        <!-- Frontend -->
+        <div class="col-4">
+          <h3>Frontend</h3>
+          <p>HTML, CSS, Bootstrap</p>
+        </div>
       </div>
       <br>
-      <li>CSS</li><br>
-      <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0"
-        aria-valuemax="100">
-        <div class="progress-bar bg-info" style="width: 50%"></div>
+      <div class="row">
+        <!-- Clouds & Databases -->
+        <div class="col-6">
+          <h3>Cloud & Databases</h3>
+          <p>MySQL</p>
+        </div>
+        <!-- Developer Tools -->
+        <div class="col-6">
+          <h3>Developer Tools</h3>
+          <p>VS Code, GitHub, LaTeX</p>
+        </div>
       </div>
-      <br>
-      <li>C</li><br>
-      <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0"
-        aria-valuemax="100">
-        <div class="progress-bar bg-warning" style="width: 50%"></div>
-      </div>
-      <br>
-      <li>Python</li><br>
-      <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0"
-        aria-valuemax="100">
-        <div class="progress-bar bg-danger" style="width: 50%"></div>
-      </div>
-    </ul><br>
+    </div>
+    <br>
   </section>
-
-  <section id="contact" class="text-center" style="background-color: rgba(111, 111, 113, 0.599);">
-    <h1>CONTACT ME</h1>
-    <form action="https://form.taxi/s/vsh6ka2m" method="POST" style="border: 2px;">
-      <label for="name">Full Name</label><br>
-
-      <input type="text" id="name" name="fname" value=""><br>
-
-      <label for="email"> Email</label><br>
-      <input type="text" id="email" name="email"><br>
-
-      <label for="text"> Enter Your Message</label><br>
-      <textarea name="msg" id="msg"></textarea><br><br>
-      <button type="submit">SUBMIT</button>
-    </form><BR>
-  </section>
-
-  <footer class="text-center" style="background-color: rgb(48, 47, 47); color: beige;">
-    <h1>FOLLOW ME ON:</h1>
-    <a href="https://github.com/NJ2612"><img src="img/git.png" alt=""></a>
-    <a href="https://www.linkedin.com/in/naina-joshi-221072301"><img src="img/link.png" alt=""></a>
+  
+  <footer id="footer" class="text-center" style="background-color: rgb(48, 47, 47); color: beige;">
+    <h1>CONTACT ME ON:</h1>
+    <a href="mailto:menainajoshi@gmail.com"><img src="img/gmail.png" alt="Email" width="30px"></a>
+    <a href="https://github.com/NJ2612"><img src="img/git.png" alt="GitHub" width="30px"></a>
+    <a href="https://www.linkedin.com/in/naina-joshi-221072301"><img src="img/link.png" alt="LinkedIn" width="30px"></a>
   </footer>
-
+  
 </body>
 
 </html>
