--- a/index.html
+++ b/index.html
@@ -60,37 +60,42 @@
   <header class="text-center" style="background-color: rgba(70, 141, 173, 0.715);">
     <br><br><br><br>
     <h1 class="display-4">Hello, I'm Naina Joshi</h1>
-    <p class="lead">A passionate Web Developer</p>
+    <p class="lead">A BTech student specializing in AI and Data Science</p>
     <br><br>
   </header>
-
+  
   <section id="about" class="container mt-5">
     <div class="row">
       <div class="col-md-4">
-        <img src="img/me.jpg" class="img-fluid rounded-circle" alt="My Image">
+        <img src="img/me.jpg" class="img-fluid rounded-circle" alt="Naina Joshi's Image">
       </div>
       <div class="col-md-8">
         <h2>About Me</h2><br>
-        <p>I am Naina Joshi, a second-year student at Graphic Era Hill University. I am pursuing my Bachelors in
-          Technology . I am highly interested in web development as well as app development.Currently, I am working on
-          brushing up my Web Development skills. However, I plan on switching to App development soon.</p>
+        <p>
+          I am Naina Joshi, a second-year B.Tech student specializing in Computer Science and Engineering at Graphic Era
+          Hill University.
+          My primary interest lies in web development, and I am dedicated to refining my skills in this domain.
+          As I progress in my academic and professional journey, I aspire to transition into app development, further
+          broadening my technical expertise.
+        </p>
         <br>
-        <p> Speaking about my hobbies: </p>
+        <p><strong>Hobbies and Interests:</strong></p>
         <ul>
-          <li>I have played badminton at school level and continue to play it in my free time.</li>
-          <li>I often prefer reading books to give my eyes some break from the screen.</li>
-          <li>I cycle, dance and busy myself in various activities.</li>
-          <li>But above all these things, I love to code and design.</li><br>
+          <li>Actively play badminton, a sport I excelled at during school-level competitions.</li>
+          <li>Enjoy reading books as a way to unwind and take breaks from screen time.</li>
+          <li>Engage in activities such as cycling and dancing to maintain a balanced and active lifestyle.</li>
+          <li>Passionate about coding and designing, combining creativity with technical skills.</li>
         </ul>
       </div>
     </div><br>
   </section>
 
 
+
   <section id="project" class="container-fluid" style="background-color: rgba(70, 141, 173, 0.715);">
     <br>
     <h1 class="text-center">PROJECTS</h1><br><br>
-  
+
     <!-- Stan Lee Tribute Page -->
     <div class="row">
       <div class="col-12 col-md-6">
@@ -104,14 +109,16 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Stan Lee Tribute Page</h5>
-                <p class="card-text">The Stan Lee tribute page project honors the legendary comic book creator behind Marvel's iconic superheroes. It highlights his contributions to the comic book industry, his creative collaborations, and his lasting impact on popular culture.</p>
+                <p class="card-text">The Stan Lee tribute page project honors the legendary comic book creator behind
+                  Marvel's iconic superheroes. It highlights his contributions to the comic book industry, his creative
+                  collaborations, and his lasting impact on popular culture.</p>
                 <a href="https://stanlee-tribute-page.netlify.app"><img src="img/logo.png" width="30px"></a>
               </div>
             </div>
           </div>
         </div>
       </div>
-  
+
       <!-- Library Management System -->
       <div class="col-12 col-md-6">
         <div class="card mb-3">
@@ -122,7 +129,9 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Library Management System</h5>
-                <p class="card-text">This project is a Library Management System that allows users to manage book inventories, track borrowed books, and facilitate user registrations. It aims to simplify the management of library resources and enhance user experience.</p>
+                <p class="card-text">This project is a Library Management System that allows users to manage book
+                  inventories, track borrowed books, and facilitate user registrations. It aims to simplify the
+                  management of library resources and enhance user experience.</p>
                 <a href="https://github.com/NJ2612/library_management_system"><img src="img/logo.png" width="30px"></a>
               </div>
             </div>
@@ -130,7 +139,7 @@
         </div>
       </div>
     </div>
-  
+
     <!-- Brain Tumor Detection System -->
     <div class="row">
       <div class="col-12 col-md-6">
@@ -142,8 +151,11 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title">Brain Tumor Detection System</h5>
-                <p class="card-text">This project is a machine learning-based system designed to detect brain tumors from MRI images. It utilizes image processing and advanced algorithms to provide accurate results, assisting healthcare professionals in diagnosis.</p>
-                <a href="https://github.com/NJ2612/Brain_Tumor_Detection_System"><img src="img/logo.png" width="30px"></a>
+                <p class="card-text">This project is a machine learning-based system designed to detect brain tumors
+                  from MRI images. It utilizes image processing and advanced algorithms to provide accurate results,
+                  assisting healthcare professionals in diagnosis.</p>
+                <a href="https://github.com/NJ2612/Brain_Tumor_Detection_System"><img src="img/logo.png"
+                    width="30px"></a>
               </div>
             </div>
           </div>
@@ -151,7 +163,7 @@
       </div>
     </div>
   </section>
-  
+
 
 
   <section id="skills">
@@ -191,14 +203,14 @@
     </div>
     <br>
   </section>
-  
+
   <footer id="footer" class="text-center" style="background-color: rgb(48, 47, 47); color: beige;">
     <h1>CONTACT ME ON:</h1>
     <a href="mailto:menainajoshi@gmail.com"><img src="img/gmail.png" alt="Email" width="30px"></a>
     <a href="https://github.com/NJ2612"><img src="img/git.png" alt="GitHub" width="30px"></a>
     <a href="https://www.linkedin.com/in/naina-joshi-221072301"><img src="img/link.png" alt="LinkedIn" width="30px"></a>
   </footer>
-  
+
 </body>
 
 </html>
