--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
       <div class="col-md-8">
         <h2>About Me</h2><br>
         <p>
-          I am Naina Joshi, a second-year B.Tech student specializing in Computer Science and Engineering at Graphic Era
-          Hill University.
+          I am Naina Joshi, a second-year B.Tech CSE student specializing in Artificial Intelligence and Data Science at Graphic Era
+          Hill University, Dehradun.
           My primary interest lies in web development, and I am dedicated to refining my skills in this domain.
           As I progress in my academic and professional journey, I aspire to transition into app development, further
           broadening my technical expertise.
