--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:description"
     content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio weebsite that highlights my accomplishments and capabilities">
   <meta property="og:image" content="https://i.imgur.com/kGgdPLV.png">
-  <meta property="og:url" content="https://nj2612portfolio.netlify.app">
+  <meta property="og:url" content="https://nj2612.github.io/Portfolio/">
   <meta property="og:type" content="website">
 
   <title>Portfolio</title>
