--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
   <meta property="og:title" content="MY Portfolio">
   <meta property="og:description"
-    content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio weebsite that highlights my accomplishments and capabilities">
-  <meta property="og:image" content="https://i.imgur.com/kGgdPLV.png">
+    content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio website that highlights my accomplishments and capabilities">
+  <meta property="og:image" content="img/thumbnail.png"> <!-- Updated line -->
   <meta property="og:url" content="https://nj2612portfolio.netlify.app">
   <meta property="og:type" content="website">
 
@@ -55,8 +55,6 @@
     </div>
   </nav>
 
-
-
   <header class="text-center" style="background-color: rgba(70, 141, 173, 0.715);">
     <br><br><br><br>
     <h1 class="display-4">Hello, I'm Naina Joshi</h1>
@@ -89,8 +87,6 @@
       </div>
     </div><br>
   </section>
-
-
 
   <section id="project" class="container-fluid" style="background-color: rgba(70, 141, 173, 0.715);">
     <br>
@@ -163,8 +159,6 @@
       </div>
     </div>
   </section>
-
-
 
   <section id="skills">
     <br>
