--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta property="og:title" content="MY Portfolio">
   <meta property="og:description"
     content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio website that highlights my accomplishments and capabilities">
-  <meta property="og:image" content="img/thumbnail.png"> <!-- Updated line -->
-  <meta property="og:url" content="https://nj2612portfolio.netlify.app">
+  <meta property="og:image" content="https://drive.google.com/file/d/1a5Ee8XFcRvoYO-_em-9hBzCpDjl7ggCz/view?usp=drive_link"> <!-- Updated line -->
+  <meta property="og:url" content="https://nj2612.github.io/Portfolio/">
   <meta property="og:type" content="website">
 
   <title>Portfolio</title>
