--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="MY Portfolio">
   <meta property="og:description"
     content="This is NJ's Portfolio. This project aims to present a visually appealing and user-friendly portfolio website that highlights my accomplishments and capabilities">
-  <meta property="og:image" content="https://drive.google.com/file/d/1a5Ee8XFcRvoYO-_em-9hBzCpDjl7ggCz/view?usp=drive_link"> <!-- Updated line -->
+  <meta property="og:image" content="https://imgur.com/a/h7msW3R"> <!-- Updated line -->
   <meta property="og:url" content="https://nj2612.github.io/Portfolio/">
   <meta property="og:type" content="website">
 
